--- a/sessie-hooks/src/components/buttons/NormalButton.css
+++ b/sessie-hooks/src/components/buttons/NormalButton.css
@@ -1,5 +1,5 @@
 
-.button-dark {
+.button.dark {
     background-color: steelblue;
     color: white;
     padding: 10px;
@@ -10,11 +10,27 @@
     margin-top: 20px;
 }
 
-.button-dark:active {
+.button.dark:active {
     -webkit-box-shadow: 0px 1px 4px -1px #424242; 
     box-shadow: 0px 1px 4px -1px #424242;
 }
-.button-light {
+
+.button {
+    background-color: yellow;
+    color: black;
+    padding: 10px;
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 1px 4px 0px #424242; 
+    box-shadow: 0px 1px 4px 0px #424242;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.button:active {
+    -webkit-box-shadow: 0px 1px 4px -1px #424242; 
+    box-shadow: 0px 1px 4px -1px #424242;
+}
+.button.light {
     background-color: white;
     color: black;
     padding: 10px;
@@ -28,7 +44,7 @@
     border-color: steelblue;
 }
 
-.button-light:active {
+.button.light:active {
     -webkit-box-shadow: 0px 1px 4px -1px #424242; 
     box-shadow: 0px 1px 4px -1px #424242;
 }
